Spacing issues to adjust for Oswald font.

--- a/wdn/templates_3.1/less/header/header.less
+++ b/wdn/templates_3.1/less/header/header.less
@@ -42,9 +42,10 @@
 
 #wdn_site_title {
     display: block;
-    font-size: 2em;
-    line-height: 1.2;
-    margin: 7px 0 -3px 45px;
+    font-size: 1.5em;
+    font-weight: 300;
+    line-height: 1.3;
+    margin: 3px 0 0 45px;
     text-overflow: ellipsis;
     overflow: hidden;
     white-space: nowrap;
@@ -123,8 +124,9 @@
         display: block;
         text-transform: uppercase;
         line-height: 0;
-        font-weight: normal;
+        font-weight: 300;
         margin: 13px 0 0 0;
+        color: rgba(62, 62, 62, 0.99);
     }
     
     #wdn_site_title {
@@ -139,11 +141,10 @@
             display:block;
             font-size:25%;
             color:#6E6E6E;
-            margin-top:-0.8em;
             letter-spacing:0em;
             text-transform:uppercase;
             font-family: @impactFont;
-            line-height: 0.8;
+            line-height: 1;
         }
         
         abbr {
@@ -212,20 +213,16 @@
     #wdn_institution_title {
         height: 0; /* Safari */
         margin: 13px 0 0 90px;
-        padding: 12px 10px;
-        color: rgba(62, 62, 62, 0.99);
-        font-size: 1.5em;
+        padding: 11px 10px;
+        font-size: 1em;
         text-shadow: 0 0 3px #fff;
     }
     
     #wdn_site_title {
         position: inherit;
         display: block;
-        margin: 12px 0 0 99px;
-        font-size: 2.5em;
+        margin: 7px 0 0 99px;
         text-shadow: 0 0 3px #fff;
-        font-weight: normal;
-        line-height: 1.1;
         width: 71%;
     }
     
